--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node":"14.x"
+    "node": "14.x"
   },
   "scripts": {
     "start": "nodemon index.js",
@@ -22,6 +22,7 @@
     "express-jwt": "^6.1.1",
     "express-validator": "^5.3.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.2.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
