--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "express": "^4.17.3",
     "express-jwt": "^6.1.1",
     "express-validator": "^5.3.0",
+    "formidable": "^2.0.1",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "mongoose": "^6.2.7",
     "morgan": "^1.10.0",
